IMB-68: feat. text-to-speech
