# server/src/text-to-speech/dto/text-to-speech.dto.ts
@@ -1,0 +1,7 @@
+import { IsString, IsNotEmpty } from 'class-validator';
+
+export class TextToSpeechDto {
+  @IsString()
+  @IsNotEmpty()
+  text: string;
+}
